<resources>
    <string name="app_name">PeSankita Indonesia</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="please_wait">Please wait...</string>
    <string name="AbstractNotificationBuilder_new_message">New message</string>
    <string name="ApplicationPreferencesActivity_currently_s">Currently: %s</string>
    <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">You haven\'t set a passphrase yet!</string>
    <plurals name="ApplicationPreferencesActivity_messages_per_conversation">
        <item quantity="one">1 message per conversation</item>
        <item quantity="other">%d messages per conversation</item>
    </plurals>
    <string name="ApplicationPreferencesActivity_delete_all_old_messages_now">Delete all old messages now?</string>
    <plurals name="ApplicationPreferencesActivity_this_will_immediately_trim_all_conversations_to_the_d_most_recent_messages">
        <item quantity="one">This will immediately trim all conversations to the most recent message.</item>
        <item quantity="other">This will immediately trim all conversations to the %d most recent messages.</item>
    </plurals>
    <string name="ApplicationPreferencesActivity_delete">Delete</string>
    <string name="ApplicationPreferencesActivity_disable_passphrase">Disable passphrase?</string>
    <string name="ApplicationPreferencesActivity_this_will_permanently_unlock_signal_and_message_notifications">This will permanently unlock PeSankita and message notifications.</string>
    <string name="ApplicationPreferencesActivity_disable">Disable</string>
    <string name="ApplicationPreferencesActivity_unregistering">Unregistering</string>
    <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Unregistering from PeSankita messages...</string>
    <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls">Unregister PeSankita?</string>
    <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls_by_unregistering">Unregister PeSankita from the server. You will need to re-register your phone number to use them again in the future.</string>
    <string name="ApplicationPreferencesActivity_error_connecting_to_server">Error connecting to server!</string>
    <string name="ApplicationPreferencesActivity_sms_enabled">SMS Enabled</string>
    <string name="ApplicationPreferencesActivity_touch_to_change_your_default_sms_app">Touch to change your default SMS app</string>
    <string name="ApplicationPreferencesActivity_sms_disabled">SMS Disabled</string>
    <string name="ApplicationPreferencesActivity_touch_to_make_signal_your_default_sms_app">Touch to make PeSankita your default SMS app</string>
    <string name="ApplicationPreferencesActivity_on">on</string>
    <string name="ApplicationPreferencesActivity_On">On</string>
    <string name="ApplicationPreferencesActivity_off">off</string>
    <string name="ApplicationPreferencesActivity_Off">Off</string>
    <string name="ApplicationPreferencesActivity_sms_mms_summary">SMS %1$s, MMS %2$s</string>
    <string name="ApplicationPreferencesActivity_privacy_summary">Passphrase %1$s, Screen security %2$s</string>
    <string name="ApplicationPreferencesActivity_appearance_summary">Theme %1$s, Language %2$s</string>
    <plurals name="AppProtectionPreferenceFragment_minutes">
        <item quantity="one">1 minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <string name="DraftDatabase_Draft_image_snippet">(image)</string>
    <string name="DraftDatabase_Draft_audio_snippet">(audio)</string>
    <string name="DraftDatabase_Draft_video_snippet">(video)</string>
    <string name="DraftDatabase_Draft_location_snippet">(location)</string>
    <string name="AttachmentManager_cant_open_media_selection">Can\'t find an app to select media.</string>
    <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">PeSankita requires the External Storage permission in order to attach photos, videos, or audio, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Storage\".</string>
    <string name="AttachmentManager_signal_requires_contacts_permission_in_order_to_attach_contact_information">PeSankita requires Contacts permission in order to attach contact information, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and eanble \"Contacts\".</string>
    <string name="AttachmentManager_signal_requires_location_information_in_order_to_attach_a_location">PeSankita requires Location permission in order to attach a location, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Location\".</string>
    <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">PeSankita requires the Camera permission in order to take photos, but it has been permanently denied. Please continue to the app settings menu, select \"Permissions\", and enable \"Camera\".</string>
    <string name="AttachmentTypeSelectorAdapter_camera">Camera</string>
    <string name="AttachmentTypeSelectorAdapter_picture">Picture</string>
    <string name="AttachmentTypeSelectorAdapter_video">Video</string>
    <string name="AttachmentTypeSelectorAdapter_audio">Audio</string>
    <string name="AttachmentTypeSelectorAdapter_contact">Contact info</string>
    <string name="AudioSlidePlayer_error_playing_audio">Error playing audio!</string>
    <string name="BlockedContactsActivity_blocked_contacts">Blocked contacts</string>
    <string name="BucketedThreadMedia_Today">Today</string>
    <string name="BucketedThreadMedia_Yesterday">Yesterday</string>
    <string name="BucketedThreadMedia_This_week">This week</string>
    <string name="BucketedThreadMedia_This_month">This month</string>
    <string name="CallScreen_Incoming_call">Incoming call</string>
    <string name="ClearProfileActivity_remove">Remove</string>
    <string name="ClearProfileActivity_remove_profile_photo">Remove profile photo?</string>
    <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">Your safety number with %1$s has changed. This could either mean that someone is trying to intercept your communication, or that %2$s simply reinstalled PeSankita.</string>
    <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">You may wish to verify your safety number with this contact.</string>
    <string name="ConfirmIdentityDialog_accept">Accept</string>
    <string name="ContactsDatabase_message_s">Message %s</string>
    <string name="ContactsDatabase_signal_call_s">PeSankita Call %s</string>
    <string name="ConversationItem_message_size_d_kb">Message size: %d KB</string>
    <string name="ConversationItem_expires_s">Expires: %s</string>
    <string name="ConversationItem_error_not_delivered">Not delivered</string>
    <string name="ConversationItem_view_secure_media_question">View secure media?</string>
    <string name="ConversationItem_this_media_has_been_stored_in_an_encrypted_database_external_viewer_warning">This media has been stored in an encrypted database. Unfortunately, to view it with an external content viewer currently requires the data to be temporarily decrypted and written to storage. Are you sure that you would like to do this?</string>
    <string name="ConversationItem_error_received_stale_key_exchange_message">Error, received stale key exchange message.</string>
    <string name="ConversationItem_received_key_exchange_message_tap_to_process">Received key exchange message, tap to process.</string>
    <string name="ConversationItem_group_action_left">%1$s has left the group.</string>
    <string name="ConversationItem_click_for_details">Tap for details</string>
    <string name="ConversationItem_click_to_approve_unencrypted">Tap for unsecured fallback</string>
    <string name="ConversationItem_click_to_approve_unencrypted_sms_dialog_title">Fallback to unencrypted SMS?</string>
    <string name="ConversationItem_click_to_approve_unencrypted_mms_dialog_title">Fallback to unencrypted MMS?</string>
    <string name="ConversationItem_click_to_approve_unencrypted_dialog_message">This message will <b>not</b> be encrypted because the recipient is no longer a PeSankita user.\n\nSend unsecured message?</string>
    <string name="ConversationItem_unable_to_open_media">Can\'t find an app able to open this media.</string>
    <string name="ConversationItem_unregistered_recipient">Unregistered recipient</string>
    <string name="ConversationItem_unregistered_recipient_dialog_title">Recipient has been unregistered</string>
    <string name="ConversationItem_unregistered_recipient_dialog_message">Unable to send encrypted message because the recipient is no longer a PeSankita user.</string>
    <string name="ConversationItem_copied_text">Copied %s</string>
    <string name="ConversationItem_from_s">from %s</string>
    <string name="ConversationItem_to_s">to %s</string>
    <string name="ConversationActivity_reset_secure_session_question">Reset secure session?</string>
    <string name="ConversationActivity_this_may_help_if_youre_having_encryption_problems">This may help if you\'re having encryption problems in this conversation. Your messages will be kept.</string>
    <string name="ConversationActivity_reset">Reset</string>
    <string name="ConversationActivity_delete_thread_question">Delete conversation?</string>
    <string name="ConversationActivity_this_will_permanently_delete_all_messages_in_this_conversation">This will permanently delete all messages in this conversation.</string>
    <string name="ConversationActivity_add_attachment">Add attachment</string>
    <string name="ConversationActivity_select_contact_info">Select contact info</string>
    <string name="ConversationActivity_compose_message">Compose message</string>
    <string name="ConversationActivity_sorry_there_was_an_error_setting_your_attachment">Sorry, there was an error setting your attachment.</string>
    <string name="arrays__import_export">Import / export</string>
    <string name="text_secure_normal__menu_new_group">New group</string>
    <string name="text_secure_normal__menu_settings">Settings</string>
    <string name="text_secure_normal__menu_clear_passphrase">Lock</string>
    <string name="text_secure_normal__mark_all_as_read">Mark all read</string>
    <string name="text_secure_normal__invite_friends">Invite friends</string>
    <string name="text_secure_normal__applications">Applications</string>
    <string name="text_secure_normal__help">Help</string>
    <string name="new_conversation_activity__refresh">Refresh</string>
    <string name="application_hkki_event">Event HKKI, 7 March 2018</string>
    <string name="application_hkki_declaration">Declaration, HKKI 2018</string>
    <string name="application_hkki_material">Material and Discussion, HKKI 2018</string>
    <string name="application_kitsia_invitation_title">Social Media Kita Indonesia</string>
    <string name="application_kitsia_invitation_description">Request invitation to join Kitsia</string>
    <string name="application_kitsia_name">Full Name</string>
    <string name="application_kitsia_email">Email</string>
    <string name="application_kitsia_source">Where do you get information about Kitsia?</string>
    <string name="application_kitsia_invite">Request invitation</string>
    <string name="tab_media_fragment__audio">Audio</string>
    <string name="tab_media_fragment__file">File</string>
    <string name="tab_media_fragment__empty">No media</string>
    <string name="tab_media_fragment__show_more">Show more</string>
</resources>