<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?application_background2"
            android:layout_marginTop="5dp"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/layout_thumbnail"
                android:layout_width="match_parent"
                android:layout_marginBottom="3dp"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_thumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical"
                    tools:listitem="@layout/media_grid_thumbnail_item"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_audio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?application_background"
                android:layout_marginBottom="5dp"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/title_audio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/tab_media_fragment__audio"/>

                    <TextView
                        android:id="@+id/count_audio"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:text="1"/>
                </RelativeLayout>

                <View android:background="#ccc"
                      android:layout_width = "match_parent"
                      android:layout_height="1dp"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_audio"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical"
                    tools:listitem="@layout/media_list_item"/>

                <View android:background="#ccc"
                      android:layout_width = "match_parent"
                      android:layout_height="1dp"/>

                <RelativeLayout
                    android:id="@+id/show_more_audio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:text="@string/tab_media_fragment__show_more"/>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_file"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?application_background"
                android:layout_marginBottom="5dp"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/title_file"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/tab_media_fragment__file"/>

                    <TextView
                        android:id="@+id/count_file"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:text="1"/>
                </RelativeLayout>

                <View android:background="#ccc"
                      android:layout_width = "match_parent"
                      android:layout_height="1dp"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_file"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical"
                    tools:listitem="@layout/media_list_item"/>

                <View android:background="#ccc"
                      android:layout_width = "match_parent"
                      android:layout_height="1dp"/>

                <RelativeLayout
                    android:id="@+id/show_more_file"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:text="@string/tab_media_fragment__show_more"/>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/no_media"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textStyle="italic"
                    android:textSize="24sp"
                    android:gravity="center_horizontal"
                    android:paddingTop="30dp"
                    android:text="@string/tab_media_fragment__empty" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>
